#84 - Fix styles for map and main menu on mobile.

--- a/src/Recollections.Blazor.UI/wwwroot/css/site.scss
+++ b/src/Recollections.Blazor.UI/wwwroot/css/site.scss
@@ -24,6 +24,10 @@ a {
 @import "_inline-editor.scss";
 @import "_file-upload.scss";
 
+.main-navbar {
+    z-index: 2;
+}
+
 .actions {
     .right-actions {
         text-align: right;
